--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -86,6 +86,7 @@
         "xtr1common": "cpp",
         "xtree": "cpp",
         "xutility": "cpp",
-        "cerrno": "cpp"
+        "cerrno": "cpp",
+        "variant": "cpp"
     }
 }
