Added logger messages and changed NULL by nullptr

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -87,6 +87,7 @@
         "xtree": "cpp",
         "xutility": "cpp",
         "cerrno": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "source_location": "cpp"
     }
 }
