Removed logging for now and fixed windows build

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -88,6 +88,8 @@
         "xutility": "cpp",
         "cerrno": "cpp",
         "variant": "cpp",
-        "source_location": "cpp"
+        "source_location": "cpp",
+        "cstdarg": "cpp",
+        "span": "cpp"
     }
 }
