Fixed a bug in close function. Added a bit of logging.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -90,6 +90,7 @@
         "variant": "cpp",
         "source_location": "cpp",
         "cstdarg": "cpp",
-        "span": "cpp"
+        "span": "cpp",
+        "valarray": "cpp"
     }
 }
