Changed to the new info share method (json) Removed unused functions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -91,6 +91,7 @@
         "source_location": "cpp",
         "cstdarg": "cpp",
         "span": "cpp",
-        "valarray": "cpp"
+        "valarray": "cpp",
+        "codecvt": "cpp"
     }
 }
